--- a/Project Yonko/.gitignore
+++ b/Project Yonko/.gitignore
@@ -33,12 +33,16 @@ ExportedObj/
 *.sln
 *.suo
 *.tmp
+*.user
+*.userprefs
 *.pidb
+*.booproj
 *.svd
 *.pdb
 *.mdb
 *.opendb
 *.VC.db
+
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
